--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       text-align: center;
       padding: 40px;">
     <h1>@Win塑料颜料</h1>
-    <img src="https://s1.328888.xyz/2022/08/26/GNNm5.webp" alt="hi" width="400" height="">    
+    <img src="https://user-assets.sxlcdn.com/images/1017416/FsLaqL5f0_iZG8C2rQIrEMiBk93O.png?imageMogr2/strip/auto-orient/thumbnail/1200x9000%3E/format/png" alt="hi" width="400" height="">    
     </div>
     <div style="
       text-align: center;
