--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       text-align: center;
       font-size: 12px;
       padding: 40px;">
-    <a href="https://site-1000081-4667-8695.mysxl.cn">欢迎访问 @MC加电脑科技教程 的网页</a>
+    <a href="http://mcjdnkjjc.mysxl.cn/">欢迎访问 @MC加电脑科技教程 的网页</a>
+      <a href="https://rrsdn.mysxl.cn/">https://rrsdn.mysxl.cn/</a>
     <a href="https://www.xunlei.com/">下载迅雷</a>
     <p><i>哈哈哈哈哈哈</i></p>
     </div>
