--- a/index.html
+++ b/index.html
@@ -8,17 +8,9 @@
        body {
         margin: 0;
       } 
-      /* body {
-        background-color:#d0e4fe
-      }
-      h1 {
-        color:orange;
-        text-align:center;
-      }
       p {
         font-family:"Times New Roman";
-        text-align:center;
-      } */
+      }
     </style>
   </head>
   <body>
@@ -26,9 +18,9 @@
       background-color: #f1f1f1;
       color: orange;
       text-align: center;
-      padding: 40px;">
+      padding: 30px;">
     <h1>@Win塑料颜料</h1>
-    <img src="https://user-assets.sxlcdn.com/images/1017416/FsLaqL5f0_iZG8C2rQIrEMiBk93O.png?imageMogr2/strip/auto-orient/thumbnail/1200x9000%3E/format/png" alt="hi" width="400" height="">    
+    <img src="https://user-assets.sxlcdn.com/images/1017416/FsLaqL5f0_iZG8C2rQIrEMiBk93O.png?imageMogr2/strip/auto-orient/thumbnail/1200x9000%3E/format/png" alt="hi" width="333" height="">    
     </div>
     <div style="
       text-align: center;
@@ -38,13 +30,23 @@
     <h2>欢迎来到<i>我的网页</i></h2>
     </div>
     <div style="
+      display: block;
       max-width: 400px;
-      margin: 15px auto;
-      padding: 10px;
-      line-height: 1.5;">
-    <a href="https://site-1000081-4667-8695.mysxl.cn/windows"><img src="https://user-assets.sxlcdn.com/images/1000081/Fq1g6rSVXM0tTkBXjYQ3_oMPgjAk.png?imageMogr2/strip/auto-orient/thumbnail/1200x9000%3E/quality/90!/format/png" alt="windows" width="400"></a>
-    <a href="https://site-1000081-4667-8695.mysxl.cn/3"><img src="https://user-assets.sxlcdn.com/images/1000081/Fv30epaHIJfvKdxo49lnKjuD2o4s.png?imageMogr2/strip/auto-orient/thumbnail/1200x9000%3E/quality/90!/format/png" alt="VM" width="400"></a>
-    <p>这里什么也没有</p>
+      margin: auto auto;
+      ">
+      <div style="padding: 10px">
+        <a href="http://mcjdnkjjc.mysxl.cn/"><img src="https://user-assets.sxlcdn.com/images/1000081/Fq1g6rSVXM0tTkBXjYQ3_oMPgjAk.png?imageMogr2/strip/auto-orient/thumbnail/1200x9000%3E/quality/90!/format/png" alt="windows" width="333"></a>
+      </div>
+      <div style="padding: 10px">
+        <a href="http://mcjdnkjjc.mysxl.cn/"><img src="https://user-assets.sxlcdn.com/images/1000081/Fv30epaHIJfvKdxo49lnKjuD2o4s.png?imageMogr2/strip/auto-orient/thumbnail/1200x9000%3E/quality/90!/format/png" alt="VM" width="333"></a>
+    </div>
+    </div>
+    <div style="
+    margin: 15px auto;
+    max-width: 400px;
+    line-height: 1.5;">
+      <a href=".\index1.html">帮助与支持</a>
+      <p>没了</p>
     </div>
     <div style="
       background-color: #f1f1f1;
@@ -52,7 +54,8 @@
       font-size: 12px;
       padding: 40px;">
     <a href="http://mcjdnkjjc.mysxl.cn/">欢迎访问 @MC加电脑科技教程 的网页</a>
-      <a href="https://rrsdn.mysxl.cn/">https://rrsdn.mysxl.cn/</a>
+    <a href="https://rrsdn.mysxl.cn/">https://rrsdn.mysxl.cn/</a>
+    <br><br>
     <a href="https://www.xunlei.com/">下载迅雷</a>
     <p><i>哈哈哈哈哈哈</i></p>
     </div>
