--- a/index1.html
+++ b/index1.html
@@ -35,7 +35,7 @@
         width: 190px;
         background-color: white;"
         class="bs">
-        <a href="\"><img src=".\P.WEBP" width="188px"></a>
+        <a href="\win"><img src=".\P.WEBP" width="188px"></a>
     </div>
     <!--主区域-->
     <div class="flex flex1 c">
