--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Win塑料颜料</title>
+    <title>帮助与支持</title>
     <style>
         body {
             margin: 0;
