--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>帮助与支持</title>
+    
     <style>
         body {
             margin: 0;
@@ -35,31 +36,44 @@
         width: 190px;
         background-color: white;"
         class="bs">
-        <a href="\win"><img src=".\P.WEBP" width="188px"></a>
+        <a href="\"><img src=".\P.WEBP" alt="logo" width="188px"></a>
+        <ul>
+            <li>
+                <p>帮助与支持</p>
+            </li>
+        </ul>
     </div>
     <!--主区域-->
     <div class="flex flex1 c">
         <!--头部-->
         <div style="
             height: 60px;
-            background-color: white;
+            background-color: rgba(0, 183, 255, 0.475);
             z-index: 1;"
             class="bs">
+            <a href="https://next.itellyou.cn/"><img id="logo" src="https://static.itellyou.cn/images/logo-white.png" alt="logo" ></a>
         </div>
         <!--下部-->
         <div class="flex flex1">
-            <!--左-->
+            <!--左(内容区)-->
             <div style="flex: 3;
             overflow: auto;
             background-color: white;"
             class="flex c bs">
-                
+                <p><i>如果</i>您的电脑遇到了一些问题</p>
+                <ul>
+                    <li>重启</li>
+                    <li>重装系统</li>
+                    <li>更换特定硬件</li>
+                </ul>
+                <p><big>注意：</big>备份重要文件</p>
             </div>
             <!--右-->
             <div class="flex1 flex c">
                 <div style="height: 320px;
                 background-color: white;"
                 class="bs">
+                <p>哈哈哈哈哈哈</p>
                 </div>
             </div>
         </div>
