--- a/index1.html
+++ b/index1.html
@@ -36,7 +36,7 @@
         width: 190px;
         background-color: white;"
         class="bs">
-        <a href="\"><img src=".\P.WEBP" alt="logo" width="188px"></a>
+        <a href="\win"><img src=".\P.WEBP" alt="logo" width="188px"></a>
         <ul>
             <li>
                 <p>帮助与支持</p>
