--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <a href="http://mcjdnkjjc.mysxl.cn/">欢迎访问 @MC加电脑科技教程 的网页</a>
     <a href="https://rrsdn.mysxl.cn/">https://rrsdn.mysxl.cn/</a>
     <br><br>
-    <a href="https://www.xunlei.com/">下载迅雷</a>
+    <a href="https://github.com/">github</a>
     <p><i>哈哈哈哈哈哈</i></p>
     </div>
   </body>
