--- a/index1.html
+++ b/index1.html
@@ -28,6 +28,17 @@
         .c {
             flex-direction: column;
         }
+        .ms {
+            padding-right: 6px;
+            padding-left: 6px;
+            padding-top: 4px;
+            padding-bottom: 2px;
+            float: left;
+            height: 100%;
+            margin-top: 1px;
+            /* width: 137px; */
+            outline-offset: -2px;
+        }
     </style>
 </head>
 <body class="flex">
@@ -36,7 +47,7 @@
         width: 190px;
         background-color: white;"
         class="bs">
-        <a href="\win"><img src=".\P.WEBP" alt="logo" width="188px"></a>
+        <a href="\win"><img src=".\P.WEBP" alt="me" width="188px"></a>
         <ul>
             <li>
                 <p>帮助与支持</p>
@@ -50,8 +61,15 @@
             height: 60px;
             background-color: rgba(0, 183, 255, 0.475);
             z-index: 1;"
-            class="bs">
-            <a href="https://next.itellyou.cn/"><img id="logo" src="https://static.itellyou.cn/images/logo-white.png" alt="logo" ></a>
+            class="bs flex">
+            <a class="ms" href="https://next.itellyou.cn/"><img id="logo" src="https://static.itellyou.cn/images/logo-white.png" alt="itellyou"></a>
+            <a id="logo" class="ms" itemprop="url" href="https://www.microsoft.com" aria-label="Microsoft" data-m="{&quot;cN&quot;:&quot;GlobalNav_Logo_cont&quot;,&quot;cT&quot;:&quot;Container&quot;,&quot;id&quot;:&quot;c3c4c1m1r1a1&quot;,&quot;sN&quot;:3,&quot;aN&quot;:&quot;c4c1m1r1a1&quot;}" style="overflow-x: visible;">
+                <img alt="microsoft" itemprop="logo" src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31" role="presentation" aria-hidden="true" style="overflow-x: visible;">
+                <span itemprop="name" role="presentation" aria-hidden="true" style="overflow-x: visible;"></span>
+            </a>
+            <a class="ms" href="https://www.wepe.com.cn/"><img id="logo" src="https://www.wepe.com.cn/img/LOGO_WEPE.png" alt="wepe"></a>
+            <a href="http://www.360.cn"> <img class="ms" src="https://p3.ssl.qhimg.com/t011e94f0b9ed8e66b0.png" alt="360"></a>
+            <a href="https://www.xunlei.com/" target="_blank" class="ms" title="迅雷" xl-xla-type="click" xl-xla-category="common_action" xl-xla-action="navgation_click" xl-xla-extdata="{&quot;button&quot;: &quot;home_page&quot;}"><img src="https://xl11.xunlei.com/4b2d3f69da903857b0c636e1da230141.png" id="logo" alt="xunlei"></a>
         </div>
         <!--下部-->
         <div class="flex flex1">
